[project]
name = "parkour-analysis"
version = "0.1.0"
description = "AI-powered parkour technique analysis using YOLO pose estimation and SMPL-X 3D body modeling"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Vision Parkour Technology"}
]
keywords = ["parkour", "pose-estimation", "3d-modeling", "sports-analysis", "yolo", "smplx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "opencv-python>=4.8.0,<5.0.0",
    "torch>=2.0.0,<3.0.0",
    "torchvision>=0.15.0,<1.0.0",
    "numpy>=1.24.0,<2.0.0",
    "matplotlib>=3.7.0,<4.0.0",
    "ultralytics>=8.0.0,<9.0.0",
    "scipy>=1.10.0,<2.0.0",
    "reportlab>=4.0.0,<5.0.0",
    "smplx>=0.1.28,<1.0.0",
    "trimesh>=3.20.0,<4.0.0",
    "pyrender>=0.1.45,<1.0.0",
    "chumpy>=0.70,<1.0.0",  # Required by smplx
    "huggingface-hub>=0.19.0,<1.0.0",  # Required for SAM3 model downloads and CLI
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
parkour-analysis = "parkour_analysis:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# Extra build dependencies for packages that need them
# Note: Install pip first with: uv pip install pip
extra-build-dependencies = { "chumpy" = ["pip"] }

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

